fix(frontend): align mobile factory central sections to bottom edge

--- a/frontend/src/features/cardSectionEditor/presentation/CardSectionRenderer/CardSectionRenderer.module.scss
+++ b/frontend/src/features/cardSectionEditor/presentation/CardSectionRenderer/CardSectionRenderer.module.scss
@@ -28,15 +28,11 @@
     min-height: 0;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
 
     > :global([class*='cardphoto']:not([class*='View']):not([class*='Toolbar']):not([class*='Stage']):not([class*='Title'])),
     > :global([class*='cardtextContainer']),
-    > :global([class*='envelope']:not([class*='Section']):not([class*='Peek']):not([class*='Toggle']):not([class*='Logo']):not([class*='Mark']):not([class*='Footer']):not([class*='Top']):not([class*='Bottom']):not([class*='View']):not([class*='Work']):not([data-envelope-mobile-form='true'])) {
-      flex: 0 0 auto;
-      height: auto;
-      min-height: 0;
-    }
-
+    > :global([class*='envelope']:not([class*='Section']):not([class*='Peek']):not([class*='Toggle']):not([class*='Logo']):not([class*='Mark']):not([class*='Footer']):not([class*='Top']):not([class*='Bottom']):not([class*='View']):not([class*='Work']):not([data-envelope-mobile-form='true'])),
     > :global([class*='envelope'][data-envelope-mobile-form='true']),
     > :global([class*='aroma']:not([class*='Tile']):not([class*='View']):not([class*='Work'])),
     > :global([class*='date']:not([class*='View']):not([class*='Header']):not([class*='Bottom']):not([class*='Peek']):not([class*='Strip'])) {
