--- a/frontend/src/features/cardphoto/presentation/Cardphoto.module.scss
+++ b/frontend/src/features/cardphoto/presentation/Cardphoto.module.scss
@@ -22,13 +22,14 @@
 
   :global([data-shell-layout='mobile']) & {
     width: 100%;
-    height: auto;
+    height: 100%;
     max-height: 100%;
     min-height: 0;
-    flex: 0 0 auto;
+    flex: 1 1 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
   }
 }
 
@@ -46,10 +47,11 @@
   }
 
   :global([data-shell-layout='mobile']) & {
-    flex: 0 0 auto;
+    flex: 1 1 auto;
     width: 100%;
-    height: auto;
-    justify-content: flex-start;
+    height: 100%;
+    min-height: 0;
+    justify-content: flex-end;
   }
 }
 
