--- a/frontend/src/features/cardtext/presentation/Cardtext.module.scss
+++ b/frontend/src/features/cardtext/presentation/Cardtext.module.scss
@@ -13,10 +13,11 @@
   }
 
   :global([data-shell-layout='mobile']) & {
-    height: auto;
+    height: 100%;
     min-height: 0;
-    flex: 0 0 auto;
+    flex: 1 1 auto;
     flex-direction: column;
+    justify-content: flex-end;
   }
 }
 
@@ -38,13 +39,14 @@
 
   :global([data-shell-layout='mobile']) & {
     width: 100%;
-    height: auto;
+    height: 100%;
     max-height: 100%;
     min-height: 0;
-    flex: 0 0 auto;
+    flex: 1 1 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
   }
 }
 
@@ -62,10 +64,11 @@
   }
 
   :global([data-shell-layout='mobile']) & {
-    flex: 0 0 auto;
+    flex: 1 1 auto;
     width: 100%;
-    height: auto;
-    justify-content: flex-start;
+    height: 100%;
+    min-height: 0;
+    justify-content: flex-end;
   }
   // overflow: hidden;
 }
